--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css">
     <title>React App</title>
   </head>
+  
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header class="menu">
+      <div class="logo"><a href="#">PIZZA<span>BOOM</span></a></div>
+      <ul class="nav">
+        <li><a href="#">пицца</a></li>
+        <li><a href="#">отзывы</a></li>
+      </ul>
+    </header>
+
     <div id="root"></div>
   </body>
+
 </html>
